--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
     "@supabase/supabase-js": "^2.86.2",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "multer": "^2.0.2"
   }
 }
